fix avatar border being cut off

--- a/src/app/people/people.component.scss
+++ b/src/app/people/people.component.scss
@@ -33,6 +33,7 @@
   width: $size;
   height: $size;
   margin: $size / 8;
+  padding: 2px;
   transition: all 0.15s ease-in-out;
   will-change: transform;
   a {
